05.spring_boot/yaml/2.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-demo
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-demo
  template:
    metadata:
      labels:
        app: springboot-demo
    spec:
      containers:
        - name: springboot-demo
          image: 154551172320.dkr.ecr.ap-northeast-2.amazonaws.com/junholee-eks-demo-ecr-repo:1.1
          ports:
            - containerPort: 8080
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: affinity1
                    operator: In
                    values:
                      - dev
