05.spring_boot/yaml/3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-demo
  namespace: demo
spec:
  selector:
    app: springboot-demo
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
